@@ -18,7 +18,7 @@ Gem::Specification.new do |s|
   s.executables = ['pws']
   s.add_dependency 'clipboard', '~> 1.0.5'
   s.add_dependency 'paint',     '>= 0.8.7'
-  s.add_dependency 'pbkdf2'
+  s.add_dependency 'pbkdf2-ruby'
   s.add_development_dependency 'rake'
   s.add_development_dependency 'aruba'
   s.add_development_dependency 'cucumber'
